@@ -459,7 +459,6 @@ meta_window_new_with_attrs (MetaDisplay       *display,
   window->initial_workspace_set = FALSE;
   window->initial_timestamp_set = FALSE;
   window->net_wm_user_time_set = FALSE;
-  window->focus_despite_user_time = FALSE;
   window->calc_placement = FALSE;
   window->shaken_loose = FALSE;
   window->have_focus_click_grab = FALSE;
@@ -1622,9 +1621,6 @@ window_takes_focus_on_map (MetaWindow *window)
     case META_WINDOW_NORMAL:
     case META_WINDOW_DIALOG:
     case META_WINDOW_MODAL_DIALOG:
-      if (window->focus_despite_user_time)
-	return TRUE;
-
       meta_topic (META_DEBUG_STARTUP,
                   "COMPARISON:\n"
                   "  net_wm_user_time_set : %d\n"
@@ -1723,8 +1719,6 @@ meta_window_show (MetaWindow *window)
       ensure_mru_position_after (window, window->display->focus_window);
     }
 
-  window->focus_despite_user_time = FALSE;
- 
   if (!window->placed)
     {
       /* We have to recalc the placement here since other windows may
@@ -1939,8 +1933,6 @@ meta_window_unminimize (MetaWindow  *window)
   if (window->minimized)
     {
       window->minimized = FALSE;
-      window->focus_despite_user_time = TRUE;
-      
       meta_window_queue_calc_showing (window);
 
       meta_window_foreach_transient (window,
@@ -2200,6 +2192,9 @@ void
 meta_window_activate (MetaWindow *window,
                       guint32     timestamp)
 {
+  if (timestamp != 0)
+    window->net_wm_user_time = timestamp;
+
   /* disable show desktop mode unless we're a desktop component */
   maybe_leave_show_desktop_mode (window);
  
